[project]
name = "tp-multithreading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.3",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "requests>=2.32.3",
    "tk>=0.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]
